--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello world
+<html>
+<head></head>
+<body>
+    <h1>OpenSearch Tutorial</h1>
+    <script>
+        setInterval(function(){ console.log(window.location.href); }, 3000);
+    </script>
+</body>
+</html>
