--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <h1>OpenSearch Tutorial</h1>
     <script>
-        setInterval(function(){ console.log(window.location.href); }, 3000);
+        setInterval(function(){ console.log(window.location.hostname); }, 3000);
     </script>
 </body>
 </html>
