--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <body>
     <h1>OpenSearch Tutorial</h1>
     <script>
-        setInterval(function(){ 
-            console.log('https://'+window.location.hostname.replace('8080','5601')); 
+        let dashboardsCheck = setInterval(function(){ 
+            let dashboardsURL = 'https://'+window.location.hostname.replace('8080','5601');
+            fetch(dashboardsURL)
+                .then(Response.text())
+                .then(data => console.log(data));
         }, 3000);
     </script>
 </body>
